# Cpp_blood_donor_project

./: .gitignore  CMakeLists.txt  CodingConvention.md  README.md  qmake.pro
docs/: bloodlife report.docx  bloodlife report_latest.docx  c++ work distribution.docx
include/: Admin.h  Analytics.h  CMakeLists.txt  DatabaseManager.h  Donor.h  GUIManager.h  Hospital.h  Search.h  SearchLog.h
src/: Admin.cpp  Analytics.cpp  CMakeLists.txt  DatabaseManager.cpp  Donor.cpp  GUIManager.cpp  Hospital.cpp  Search.cpp  SearchLog.cpp  main.cpp
